Updated controllers for job postings

--- a/app/views/job_postings/edit.html.erb
+++ b/app/views/job_postings/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>JobPostings#edit</h1>
-<p>Find me in app/views/job_postings/edit.html.erb</p>
+<h1>Edit Job Posting</h1>
+<%= render partial:"form"%>
