--- a/app/views/job_postings/new.html.erb
+++ b/app/views/job_postings/new.html.erb
@@ -1,2 +1,2 @@
-<h1>JobPostings#new</h1>
-<p>Find me in app/views/job_postings/new.html.erb</p>
+<h1>Add New Job Posting</h1>
+<%= render partial:"form"%>
